--- a/src/scss/custom/_variables.scss
+++ b/src/scss/custom/_variables.scss
@@ -1,5 +1,5 @@
 // color custom
-$white:    #fff;
+$white: #fff;
 $gray-100: #f8f9fa;
 $gray-200: #e9ecef;
 $gray-300: #dee2e6;
@@ -9,7 +9,7 @@ $gray-600: #6c757d;
 $gray-700: #495057;
 $gray-800: #343a40;
 $gray-900: #212529;
-$black:    #000;
+$black: #000;
 
 $grays: ();
 $grays: map-merge(
@@ -22,108 +22,106 @@ $grays: map-merge(
     "600": $gray-600,
     "700": $gray-700,
     "800": $gray-800,
-    "900": $gray-900
+    "900": $gray-900,
   ),
   $grays
 );
 
-$blue:    #007bff;
-$indigo:  #6610f2;
-$purple:  #6f42c1;
-$pink:    #e83e8c;
-$red:     #dc3545;
-$orange:  #fd7e14;
-$yellow:  #ffc107;
-$green:   #28a745;
-$teal:    #20c997;
-$cyan:    #17a2b8;
-$custom-orange: 	#FFC78E;
+$blue: #007bff;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #e83e8c;
+$red: #dc3545;
+$orange: #fd7e14;
+$yellow: #ffc107;
+$green: #28a745;
+$teal: #20c997;
+$cyan: #17a2b8;
+$custom-orange: #ffc78e;
 
 $colors: ();
 $colors: map-merge(
   (
-    "blue":       $blue,
-    "indigo":     $indigo,
-    "purple":     $purple,
-    "pink":       $pink,
-    "red":        $red,
-    "orange":     $orange,
-    "yellow":     $yellow,
-    "green":      $green,
-    "teal":       $teal,
-    "cyan":       $cyan,
-    "white":      $white,
-    "gray":       $gray-600,
-    "gray-dark":  $gray-800
+    "blue": $blue,
+    "indigo": $indigo,
+    "purple": $purple,
+    "pink": $pink,
+    "red": $red,
+    "orange": $orange,
+    "yellow": $yellow,
+    "green": $green,
+    "teal": $teal,
+    "cyan": $cyan,
+    "white": $white,
+    "gray": $gray-600,
+    "gray-dark": $gray-800,
   ),
   $colors
 );
 
-$primary:       $custom-orange ;
-$secondary:     $gray-600;
-$success:       $green;
-$info:          $cyan;
-$warning:       $yellow;
-$danger:        $red;
-$light:         $gray-100;
-$dark:          $gray-800;
+$primary: $custom-orange;
+$secondary: $gray-600;
+$success: $green;
+$info: $cyan;
+$warning: $yellow;
+$danger: $red;
+$light: $gray-100;
+$dark: $gray-800;
 
 $theme-colors: ();
 $theme-colors: map-merge(
   (
-    "primary":    $primary,
-    "secondary":  $secondary,
-    "success":    $success,
-    "info":       $info,
-    "warning":    $warning,
-    "danger":     $danger,
-    "light":      $light,
-    "dark":       $dark
+    "primary": $primary,
+    "secondary": $secondary,
+    "success": $success,
+    "info": $info,
+    "warning": $warning,
+    "danger": $danger,
+    "light": $light,
+    "dark": $dark,
   ),
   $theme-colors
 );
 
-
 //font-custsom
-$font-family-base-serif: Arial, "MsJhengHeiBold", "微軟正黑體", "Microsoft JhengHei", Roboto, "PingFangTC", sans-serif;
-$font-family-base:       $font-family-base-serif;
-// stylelint-enable value-keyword-case
+$font-family-base-serif: Arial, "MsJhengHeiBold", "微軟正黑體",
+  "Microsoft JhengHei", Roboto, "PingFangTC", sans-serif;
+$font-family-base: $font-family-base-serif;
 
-$font-size-base:              16px; 
+$font-size-base: 16px;
 
-$font-xx-large:				        36px;
-$font-x-large:				        28px;
-$font-large:			            24px;
-$font-larger:	                20px;
-$font-medium:                 18px;
-$font-small:	                16px;
-$font-smaller:                14px;
-$font-x-small:                12px;
-$font-xx-small:               10px;
+$font-xx-large: 36px;
+$font-x-large: 28px;
+$font-large: 24px;
+$font-larger: 20px;
+$font-medium: 18px;
+$font-small: 16px;
+$font-smaller: 14px;
+$font-x-small: 12px;
+$font-xx-small: 10px;
 
-$font-weight-light:           300;
-$font-weight-normal:          400;
-$font-weight-bold:            700;
+$font-weight-light: 300;
+$font-weight-normal: 400;
+$font-weight-bold: 700;
 
-$font-weight-base:            $font-weight-normal;
-$line-height-base:            1.5;
+$font-weight-base: $font-weight-normal;
+$line-height-base: 1.5;
 
-$h1-font-size:                $font-large;
-$h2-font-size:                $font-larger;
-$h3-font-size:                $font-medium;
-$h4-font-size:                $font-small;
-$h5-font-size:                $font-smaller;
-$h6-font-size:                $font-x-small;
-
+$h1-font-size: $font-large;
+$h2-font-size: $font-larger;
+$h3-font-size: $font-medium;
+$h4-font-size: $font-small;
+$h5-font-size: $font-smaller;
+$h6-font-size: $font-x-small;
 
 //grid-custom
 $grid-breakpoints: (
-  xs: 360px,
-  sm: 960px,
-  md: 1200px,
-  lg: 1320px,
-  xl: 1680px
+  xs: 0px,
+  sm: 768px,
+  md: 1024px,
+  lg: 1366px,
+  xl: 1680px,
 );
 
-$grid-columns:                12;
-$grid-gutter-width:           24px;
+$grid-columns: 12;
+$grid-gutter-width: 32px;
