--- a/src/scss/custom/_mixin.scss
+++ b/src/scss/custom/_mixin.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 @mixin media-breakpoint-up($key) {
   @media screen and (min-width: map-get($grid-breakpoints, $key)) {
     @content;
