--- a/src/scss/custom/_variables.scss
+++ b/src/scss/custom/_variables.scss
@@ -115,7 +115,7 @@ $h6-font-size: $font-x-small;
 
 //grid-custom
 $grid-breakpoints: (
-  xs: 0px,
+  xs: 0,
   sm: 768px,
   md: 1024px,
   lg: 1366px,
