--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,4 +1,4 @@
-// import required file before custom bootstrap
+// required import
 @import "../../node_modules/bootstrap/scss/functions";
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/mixins";
@@ -12,6 +12,4 @@
 @import "../../node_modules/bootstrap/scss/grid";
 @import "../../node_modules/bootstrap/scss/utilities";
 
-@import "./custom/mixin";
 @import "./custom/typography";
-@import "./custom/font";
