--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -7,9 +7,9 @@
 @import "./variables";
 
 // optional import
-@import "../../node_modules/bootstrap/scss/reboot";
 @import "../../node_modules/bootstrap/scss/images";
 @import "../../node_modules/bootstrap/scss/grid";
 @import "../../node_modules/bootstrap/scss/utilities";
 
+@import "./custom/reboot";
 @import "./custom/typography";
